--- a/.config/pipewire/pipewire.conf.d/10-rates.conf
+++ b/.config/pipewire/pipewire.conf.d/10-rates.conf
@@ -1,3 +1,5 @@
 context.properties = {
+	default.clock.rate = 44100
+	default.clock.min-quantum = 1024
 	default.clock.allowed-rates = [ 44100 48000 88200 96000 ]
 }
